[gd_scene load_steps=29 format=3 uid="uid://d2ylbnavivswc"]

[ext_resource type="Script" path="res://slime.gd" id="1_di72m"]
[ext_resource type="Texture2D" uid="uid://cj1ya8bn3yuef" path="res://Monsters/Slime/Slime_Spiked_Death.png" id="2_xftdu"]
[ext_resource type="Texture2D" uid="uid://ci2a336adkkl8" path="res://Monsters/Slime/Slime_Spiked_Run.png" id="3_uxhnb"]
[ext_resource type="Texture2D" uid="uid://br2hyx80cslk2" path="res://Monsters/Slime/Slime_Spiked_Jump_FX.png" id="3_ykhnf"]
[ext_resource type="Texture2D" uid="uid://dkjdercu8nb8x" path="res://Monsters/Slime/Slime_Spiked_Idle.png" id="4_dtkwc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iaogt"]
atlas = ExtResource("2_xftdu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvytx"]
atlas = ExtResource("2_xftdu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypuwg"]
atlas = ExtResource("2_xftdu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqvx6"]
atlas = ExtResource("2_xftdu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvp2y"]
atlas = ExtResource("2_xftdu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywdws"]
atlas = ExtResource("2_xftdu")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_muhpx"]
atlas = ExtResource("3_ykhnf")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q77g2"]
atlas = ExtResource("3_ykhnf")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8jwr"]
atlas = ExtResource("3_ykhnf")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc1nl"]
atlas = ExtResource("3_ykhnf")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pskkg"]
atlas = ExtResource("4_dtkwc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwopi"]
atlas = ExtResource("4_dtkwc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4nvk"]
atlas = ExtResource("4_dtkwc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu2f7"]
atlas = ExtResource("4_dtkwc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8wpf"]
atlas = ExtResource("3_uxhnb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j53h3"]
atlas = ExtResource("3_uxhnb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch2ux"]
atlas = ExtResource("3_uxhnb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2vn"]
atlas = ExtResource("3_uxhnb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_33w2w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvytx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypuwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqvx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvp2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywdws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muhpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q77g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8jwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc1nl")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pskkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwopi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4nvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu2f7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8wpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j53h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch2ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2vn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nj8a2"]
size = Vector2(18, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_ttboc"]
radius = 164.049

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hogpf"]
size = Vector2(32, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_205ts"]
size = Vector2(14, 5)

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_di72m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_33w2w")
animation = &"Death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -6)
shape = SubResource("RectangleShape2D_nj8a2")
one_way_collision = true
one_way_collision_margin = 50.0

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_ttboc")
one_way_collision_margin = 0.1

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-2, -5.5)
shape = SubResource("RectangleShape2D_hogpf")

[node name="PlayerDeath" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(-1, -12.5)
shape = SubResource("RectangleShape2D_205ts")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="area_entered" from="PlayerCollision" to="." method="_on_player_collision_area_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="area_entered" from="PlayerDeath" to="." method="_on_player_death_area_entered"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
